This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: faulthandler causes segfaults
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: tcaswell, vstinner
Priority: normal Keywords: patch

Created on 2019-08-23 21:23 by tcaswell, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 15440 merged tcaswell, 2019-08-23 21:54
Messages (3)
msg350332 - (view) Author: Thomas Caswell (tcaswell) * Date: 2019-08-23 21:23
Changing faulthandler to only allocate it's stack when use causes python to segfault with

import faulthandler
faulthandler.cancel_dump_traceback_later()

https://bugs.python.org/issue37851 https://github.com/python/cpython/pull/15358
msg350796 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-29 16:30
New changeset e278335a6eb049e6028db9a8dcb8baac6cb365ee by Victor Stinner (Thomas A Caswell) in branch 'master':
bpo-37933: Fix faulthandler.cancel_dump_traceback_later() (GH-15440)
https://github.com/python/cpython/commit/e278335a6eb049e6028db9a8dcb8baac6cb365ee
msg350797 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-08-29 16:30
Thanks Thomas.
History
Date User Action Args
2022-04-11 14:59:19adminsetgithub: 82114
2019-08-29 16:30:50vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg350797

stage: patch review -> resolved
2019-08-29 16:30:07vstinnersetmessages: + msg350796
2019-08-23 21:54:17tcaswellsetkeywords: + patch
stage: patch review
pull_requests: + pull_request15133
2019-08-23 21:24:40tcaswellsetcomponents: + Extension Modules, - Library (Lib)
2019-08-23 21:23:01tcaswellcreate